alt_kernel: Update CVM8 kernel classes